2012-12-13  Araki Ken  <arakiken@users.sf.net>

	* configure.in, tool/mlimgloader/Makefile.in, c_imagelib.c:
	  Fixes for tool/mlimgloader/none.c.

	* tool/mlimgloader/none.c: Added.
	  (none.c can handle sixel graphics alone.)

	* tool/mlimgloader/main.c -> gdk-pixbuf.c
	  tool/mlimgloader/main_gdi+.cpp -> gdiplus.cpp

	* xwindow/win32/x_font.c: Font names like "Courier 10 Pitch" which
	  was wrongly regarded as 10-point size "Courier" font is parsed
	  correctly.

2012-12-12  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.win32, doc/ja/README.win32: Updated.

	* x_screen.c, x_screen_manager.c, ml_term.[ch], ml_vt100_parser.[ch],
	  ml_term_manager.[ch], vte.c, MLTermPty.c:
	  - CSI 22 0..2 t and CSI 23 0..2 t are supported.
	  - "title" is removed from configuration protocol.

	* configure.in, c_imagelib.c: Minor fixes for GDI+ support in win32.

	* tool/mlimgloader/main_gdk+.c: Added to support GDI+ not only gdk-pixbuf.

	* xlib/x_imagelib.c: create_pixbuf_from_cardinals() is disabled unless
	  ENABLE_CARD2PIXBUF macro is defined.

	* x_font.c, x_window.c: libtype functions are correctly declared if
	  libtype is statically linked to mlterm.

	* ml_logical_visual.h, ml_shape.h, ml_line.c: libctl functions are
	  correctly declared if libctl is statically linked to mlterm.

2012-12-10  Araki Ken  <arakiken@users.sf.net>

	* mlimgloader/Makefile.in:
	  -mwindows is added to link option in win32.

	* mlimgloader/main.c:
	  Retry with cygwin_conv_to_win32_path(file_path) if load_file() fails
	  in cygwin/msys.

	* mlimgloader/main.c, common/c_imagelib.c, xlib/x_imagelib.c:
	  SIZE_MAX -> SSIZE_MAX

2012-12-09  Araki Ken  <arakiken@users.sf.net>

	* mlimgloader/main.c: setmode(STDOUT_FILENO, O_BINARY) in win32.

	* win32/x_imagelib.c: Minor fixes.

2012-12-08  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c, xlib/x_imagelib.c:
	  kik_dl_open("libm.so") is tried not only with LIBMDIR but also without it.

	* fb/x_window.c: