@@ -15,10 +15,6 @@
  */
 #include <stdlib.h>	/* malloc/free/atoi */
 
-#ifndef  USE_WIN32GUI
-#include <X11/Xlib.h>
-#include <X11/Xutil.h>
-#endif
 #include <gdk-pixbuf/gdk-pixbuf.h>
 
 #include <kiklib/kik_debug.h>
@@ -44,6 +40,11 @@
 
 /* --- static functions --- */
 
+#ifndef  USE_WIN32GUI
+#define  USE_X11	/* Necessary to use closest_color_index(), lsb() and msb() */
+#include <X11/Xlib.h>
+#include <X11/Xutil.h>
+#endif
 #include  "../../common/c_imagelib.c"
 
 /* create GdkPixbuf from the specified file path.
@@ -129,7 +130,7 @@ load_file(
 	return  pixbuf ;
 }
 
-#ifndef  USE_WIN32GUI
+#ifdef  USE_X11
 
 /* returned cmap shuold be freed by the caller */
 static int
@@ -531,7 +532,7 @@ pixbuf_to_pixmap_and_mask(
 	return  1 ;
 }
 
-#endif	/* USE_WIN32GUI */
+#endif	/* USE_X11 */
 
 
 /* --- global functions --- */
@@ -542,7 +543,7 @@ main(
 	char **  argv
 	)
 {
-#ifndef  USE_WIN32GUI
+#ifdef  USE_X11
 	Display *  display ;
 	Visual *  visual ;
 	Colormap  colormap ;
@@ -561,7 +562,7 @@ main(
 	kik_set_msg_log_file_name( "mlterm/msg.log") ;
 #endif
 
-#ifndef  USE_WIN32GUI
+#ifdef  USE_X11
 	if( argc == 5)
 	{
 		if( ! ( display = XOpenDisplay( NULL)))
@@ -656,7 +657,7 @@ main(
 			size -= n_wr ;
 		}
 	}
-#ifndef  USE_WIN32GUI
+#ifdef  USE_X11
 	else
 	{
 		char  buf[10] ;
@@ -681,7 +682,7 @@ main(
 		/* Wait for parent process receiving pixmap. */
 		read( STDIN_FILENO , buf , sizeof(buf)) ;
 	}
-#endif	/* USE_WIN32GUI */
+#endif	/* USE_X11 */
 
 #ifdef  __DEBUG
 	kik_debug_printf( KIK_DEBUG_TAG " Exit image loader\n") ;
